--- a/src/styles/components/_feedback.scss
+++ b/src/styles/components/_feedback.scss
@@ -63,15 +63,13 @@
         flex-direction: column;
         gap: 12px;
 
-        .rating-box {
+        div {
           display: flex;
-          align-items: center;
           justify-content: space-between;
-          gap: 24px;
+          gap: 6px;
 
-          div {
-            display: flex;
-            gap: 6px;
+          * {
+            cursor: pointer;
           }
         }
 
