--- a/src/styles/components/_feedback.scss
+++ b/src/styles/components/_feedback.scss
@@ -52,7 +52,8 @@
           width: 100%;
           height: 200px;
           border: 1px solid #eee;
-          box-shadow: 3px 5px 10px rgba(0, 0, 0, 0.1);
+          box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.1);
+          background-color: transparent;
           padding: 7px;
           font-family: "Lato", sans-serif;
         }
