--- a/src/styles/components/_feedback.scss
+++ b/src/styles/components/_feedback.scss
@@ -59,9 +59,9 @@
           resize: none;
           border-radius: 4px;
           width: 100%;
-          height: 200px;
+          height: 250px;
+          margin-top: 6px;
           border: 1px solid #eee;
-          box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.1);
           background-color: transparent;
           padding: 7px;
           font-family: "Lato", sans-serif;
